src/test/ui/issues/issue-15207.rs
fn main() {
    loop {
        break.push(1) //~ ERROR type annotations needed
        ;
    }
}
